Fix scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -69,22 +69,6 @@ ul {
   background: linear-gradient(135deg, #284571 0%, #2989d8 43%, #207cca 52%, #2c3642 100%, #2c3642 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#284571', endColorstr='#2c3642',GradientType=1 ); }
 
-::-webkit-scrollbar {
-  background-color: transparent;
-  width: 9px; }
-
-::-webkit-scrollbar-thumb {
-  border: none;
-  border-radius: 5px;
-  width: 9px;
-  background-clip: padding-box; }
-
-.Friend-List ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.4); }
-
-.Chat ::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.5); }
-
 #root, .App, .App-header {
   overflow: hidden;
   height: 100%; }
